--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,18 @@ body {
 	font-weight: 400;
 	font-display: swap;
 }
+
+#work-listra {
+	width: 316px;
+	height: 650px;
+
+	background-image: url('/projects/listra/listra-sprite.png');
+	background-repeat: no-repeat;
+	background-position: 0px 0px;
+}
+
+#download {
+	width: 300px;
+	height: 300px;
+	background-color: red;
+}
